# choral-llm-workbench

./: .gitattributes  .gitignore  ARCHITECTURE-VUE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_LLM.md  DEPENDENCY_STATUS.md  DIFF_VIEWER_GUIDE.md  INSTALL.sh  INSTALL_WRAPPER.sh  KNOWN_ISSUES.md  OLLAMA_TROUBLESHOOTING.md  README.md  README_NESTJS.md  REQUIREMENTS.txt  SYSTEM_PROMPTS.md  USER_MANUAL.md  app.py  app.py.backup  config.yaml  dependencies-manual.js  event_indexer.py  explainer_llm.py  harmony_examples.txt  health_check.json  health_report.sh  helmholtz_converter.py  ikr_light.py  install_pinokio.sh  musicxml_exporter.py  musicxml_parser.py  ollama_llm.py  output.xml  package.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  semantic_diff_analyzer.py  semantic_diff_ui.py  (+13 more)
backend/: package.json
cli/: analyze_harmony.py  analyze_voices.py  copy_score.py  gradio_app.py  gradio_app_audio.py  gradio_app_audio_llm.py  gradio_app_audio_preview.py  gradio_app_audio_wav.py  gradio_app_llm_models.py  gradio_app_satb.py  gradio_app_satb_editor.py  gradio_app_satb_enhanced.py  gradio_app_satb_fixed.py  gradio_app_satb_ghosts.py  gradio_app_satb_interactive.py  gradio_app_satb_llm.py  gradio_app_satb_session.py  gradio_app_satb_simple.py  gradio_app_satb_simple_viewer.py  gradio_app_satb_ultra_minimal.py  gradio_app_satb_voice_previews.py  gradio_app_satb_working.py  gradio_app_score_preview.py  gradio_app_ultra_minimal.py  gradio_app_ultra_simple.py  gradio_app_working_audio.py  llm_harmonize.py  llm_reharmonize_measure.py  reharmonize_measure.py
core/: audio.py  config.py  config.yaml  constants.py  exceptions.py  i18n.py  validation.py
dependencies-manual/: install-manual.js  package.json
docs/: GETTING_STARTED.md  import_standards.md  technical-overview.txt  troubleshooting.txt
examples/: output.xml  test.xml
frontend/: index.html  package.json  vite.config.ts
llm/: llm_adapter.py  ollama_adapter.py
locales/: fallback_translations.json
scripts/: patch_package_json.py  render_voice_audio.py  replace_text.py
tests/: debug_export.py  (+34 more)
(+48 files in other folders)
